--- a/presentation/src/main/res/layout/fragment_list_pokemon.xml
+++ b/presentation/src/main/res/layout/fragment_list_pokemon.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/drawble_progress_loading"
             android:indeterminateTint="@android:color/white"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
