--- a/presentation/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/presentation/src/main/res/layout/fragment_pokemon_detail.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/ability"
+                android:text="@string/abilities"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
