--- a/presentation/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/presentation/src/main/res/layout/fragment_pokemon_detail.xml
@@ -107,6 +107,32 @@
                 app:layout_constraintTop_toBottomOf="@id/label_type"
                 tools:itemCount="3"
                 tools:listitem="@layout/item_pokemon_ability" />
+
+            <TextView
+                android:id="@+id/label_evolution"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/evolution"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recycler_type" />
+
+            <TextView
+                android:id="@+id/text_evolution"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="16dp"
+                android:textColor="@android:color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/label_evolution"
+                tools:text="@tools:sample/lorem" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
